--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,16 @@ img {
     background-color: white;
 }
 
+
+/* ! animazione campanella */
+.fa-solid.fa-bell.fa-shake {
+    --fa-animation-iteration-count: 0;
+}
+
+.nav-link.bell:hover .fa-solid.fa-bell.fa-shake {
+    --fa-animation-iteration-count: infinite;
+}
+
 /* ! fa comparire il dropdown menu verso sinistra */
 .dropdown-menu[data-bs-popper] {
     right: 0;
@@ -89,6 +99,27 @@ img {
 .sidebar .nav-link:hover {
     background-color: rgba(255, 255, 255, 0.4);
 }
+
+/* ! animazione icone sidebar */
+
+.sidebar .nav-item .fa-beat {
+    --fa-animation-iteration-count: 0;
+}
+
+.sidebar .nav-item:hover .fa-beat {
+    --fa-animation-iteration-count: infinite;
+}
+
+
+.sidebar-bottom .fa-spin {
+    --fa-animation-iteration-count: 0;
+}
+
+.sidebar-bottom li:hover .fa-spin {
+    --fa-animation-iteration-count: infinite;
+}
+
+/* !--------- */
 
 .sidebar .nav-link span {
     font-size: 1rem;
@@ -125,6 +156,10 @@ main {
 .header-item>.btn {
     color: white;
     margin-left: 10px;
+}
+
+.header-item>.btn:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .offcanvas.offcanvas-end {
